# cookiecutter-data-science

./: .gitignore  cookiecutter.json  pyproject.toml  pyrightconfig.json
{{ cookiecutter.repo_name }}/: Makefile  Makefile.tom  docker-compose.dev.yml  docker-compose.yml
{{ cookiecutter.repo_name }}/docker/: Dockerfile  Dockerfile.cookie  Dockerfile.dev
